# Tum-ai-hackathon

./: .dockerignore  AUTO_APPROVAL_GUIDE.md  BAUPROJEKTE_GUIDE.md  ELEVENLABS_INTEGRATION.md  QUICKSTART.md  README.md  compose.yaml  links.json
client/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/src/: App.tsx  index.css
database/init/: 01_schema.sql  02_data.sql  03_add_construction_site.sql  04_populate_from_links.sql  05_mock_orders.sql  08_adjust_prices.sql  (+4 more)
server/: .dockerignore  .env.example  Dockerfile  cors.py  generate_greeting.py  init_db.sql  main.py  migration_add_total_price.sql  pyproject.toml  start_server.ps1  test_elevenlabs.py  test_ws.py
server/api/v1/data_access/: database.py  tools_runtime.py
server/api/v1/data_access/anthropic/: __init__.py  agent.py  anthropic_config.py
server/api/v1/data_access/database/: __init__.py  tools.py
server/api/v1/routes/: __init__.py  artikel.py  bauprojekte.py  bestellungen.py  construction_sites.py  elevenlabs_client_token.py  inventory.py  scribe.py  voice_processing.py  websocket.py
server/api/v1/services/: __init__.py  artikel_service.py  bestellungen_service.py  claude_service.py  construction_sites_service.py  elevenlabs_service.py  inventory_service.py  message_history_service.py  scribe_service.py  tools_service.py  tts_service.py  websocket_service.py
server/scripts/: manual_urls.json  populate_artikel_from_links.py
server/tests/: test_cors.py
testing/: README.md  index.html  ws_construction_supervisor_5s_demo.html
(+27 files in other folders)
